--- a/sys-power/upower/ChangeLog
+++ b/sys-power/upower/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/upower
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/upower/ChangeLog,v 1.84 2012/10/30 19:03:48 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/upower/ChangeLog,v 1.85 2012/10/30 19:04:25 ago Exp $
+
+  30 Oct 2012; Agostino Sarubbo <ago@gentoo.org> upower-0.9.18.ebuild:
+  Stable for x86, wrt bug #438704
 
   30 Oct 2012; Agostino Sarubbo <ago@gentoo.org> upower-0.9.18.ebuild:
   Stable for amd64, wrt bug #438704
