--- a/sys-process/htop/ChangeLog
+++ b/sys-process/htop/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/htop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/htop/ChangeLog,v 1.123 2012/10/30 15:51:03 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/htop/ChangeLog,v 1.124 2012/10/30 20:09:27 idl0r Exp $
+
+  30 Oct 2012; Christian Ruppert <idl0r@gentoo.org> -htop-0.9-r2.ebuild,
+  -files/htop-0.9-debug.patch, -files/htop-0.9-small-width.patch,
+  -files/htop-0.9-uclibc.patch:
+  Cleanup
 
   30 Oct 2012; Jeroen Roovers <jer@gentoo.org> htop-1.0.1-r1.ebuild:
   Stable for HPPA (bug #439548).
