--- a/dev-ruby/ruby-augeas/ChangeLog
+++ b/dev-ruby/ruby-augeas/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-augeas
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-augeas/ChangeLog,v 1.24 2012/10/30 17:04:29 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-augeas/ChangeLog,v 1.25 2012/10/30 20:46:57 blueness Exp $
+
+  30 Oct 2012; Anthony G. Basile <blueness@gentoo.org> ruby-augeas-0.4.1.ebuild:
+  stable ppc, bug #439732
 
   30 Oct 2012; Agostino Sarubbo <ago@gentoo.org> ruby-augeas-0.4.1.ebuild:
   Stable for amd64, wrt bug #439732
@@ -93,4 +96,3 @@
   24 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> +metadata.xml,
   +ruby-augeas-0.2.0.ebuild:
   Initial import, bug #229361.
-
