--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.486 2012/10/30 20:24:09 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.487 2012/10/30 21:29:32 mgorny Exp $
+
+  30 Oct 2012; Michał Górny <mgorny@gentoo.org> systemd.eclass:
+  Introduce systemd_get_utildir() wrt bug #440320.
 
   30 Oct 2012; Michał Górny <mgorny@gentoo.org> systemd.eclass:
   Replace "echo -n" with "echo", bash removes trailing newline in subshells
