--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7081 2012/10/30 17:33:16 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7082 2012/10/30 21:57:11 eva Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  30 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> package.mask:
+  Add dev-cpp/gstreamermm to gstreamer-0.10.36 mask.
 
   30 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   arch/powerpc/ppc64/package.use.mask:
