--- a/mail-filter/postgrey/ChangeLog
+++ b/mail-filter/postgrey/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/postgrey
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/postgrey/ChangeLog,v 1.78 2012/10/30 17:33:33 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/postgrey/ChangeLog,v 1.79 2012/10/30 22:42:46 blueness Exp $
+
+  30 Oct 2012; Anthony G. Basile <blueness@gentoo.org> postgrey-1.34-r1.ebuild:
+  stable ppc64, bug #439066
 
   30 Oct 2012; Jeroen Roovers <jer@gentoo.org> postgrey-1.34-r1.ebuild:
   Stable for HPPA (bug #439066).
