--- a/dev-python/tox/ChangeLog
+++ b/dev-python/tox/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/tox
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/tox/ChangeLog,v 1.5 2012/10/31 07:44:08 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/tox/ChangeLog,v 1.6 2012/10/31 08:56:59 mgorny Exp $
+
+  31 Oct 2012; Michał Górny <mgorny@gentoo.org> tox-1.4.2.ebuild:
+  Use virtual for argparse.
 
   31 Oct 2012;  <testuser@gentoo.org> +files/tox-1.4.2-rm_version_test.patch,
   tox-1.4.2.ebuild:
