--- a/net-misc/bfgminer/ChangeLog
+++ b/net-misc/bfgminer/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/bfgminer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bfgminer/ChangeLog,v 1.25 2012/10/29 02:38:07 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bfgminer/ChangeLog,v 1.26 2012/10/31 11:05:22 blueness Exp $
+
+*bfgminer-2.9.1 (31 Oct 2012)
+*bfgminer-2.8.4 (31 Oct 2012)
+
+  31 Oct 2012; Anthony G. Basile <blueness@gentoo.org> +bfgminer-2.8.4.ebuild,
+  +bfgminer-2.9.1.ebuild:
+  Version bumps
 
   29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bfgminer-2.8.0.ebuild:
   Tighten up dependence >=dev-libs/jansson-2
