--- a/media-libs/tremor/ChangeLog
+++ b/media-libs/tremor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/tremor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/tremor/ChangeLog,v 1.3 2012/05/05 09:33:43 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tremor/ChangeLog,v 1.4 2012/10/31 11:40:29 blueness Exp $
+
+  31 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  tremor-0_pre20120120.ebuild:
+  Keyword ~ppc, bug #439722
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> tremor-0_pre20120120.ebuild:
   dev-util/pkgconfig -> virtual/pkgconfig
@@ -14,4 +18,3 @@
   20 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   +tremor-0_pre20120120.ebuild:
   Initial commit wrt #264327 by Robert Piasek
-
