--- a/media-sound/moc/ChangeLog
+++ b/media-sound/moc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/moc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/moc/ChangeLog,v 1.103 2012/10/31 11:42:22 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/moc/ChangeLog,v 1.104 2012/10/31 11:44:43 blueness Exp $
+
+  31 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  moc-2.5.0_beta1-r1.ebuild:
+  Keyword ~ppc64, bug #439722
 
   31 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   moc-2.5.0_beta1-r1.ebuild:
