--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.713 2012/10/31 11:59:48 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.714 2012/10/31 12:01:57 blueness Exp $
+
+*hardened-sources-3.2.32-r1 (31 Oct 2012)
+
+  31 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.2.32-r1.ebuild:
+  vanilla-3.2.32 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.32-201210291445
 
 *hardened-sources-2.6.32-r136 (31 Oct 2012)
 
