--- a/app-text/sigil/ChangeLog
+++ b/app-text/sigil/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-text/sigil
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/sigil/ChangeLog,v 1.5 2012/08/10 13:40:45 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/sigil/ChangeLog,v 1.6 2012/10/31 16:25:24 sbriesen Exp $
+
+*sigil-0.6.0 (31 Oct 2012)
+
+  31 Oct 2012; Stefan Briesenick <sbriesen@gentoo.org> +sigil-0.6.0.ebuild:
+  version bump
 
   10 Aug 2012; Michael Palimaka <kensington@gentoo.org> sigil-0.4.2.ebuild,
   sigil-0.4.905_beta1.ebuild, sigil-0.5.0.ebuild, sigil-0.5.3.ebuild:
