--- a/net-p2p/transmission/ChangeLog
+++ b/net-p2p/transmission/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/transmission
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.213 2012/10/23 17:46:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.214 2012/10/31 18:11:32 ssuominen Exp $
+
+*transmission-2.73 (31 Oct 2012)
+
+  31 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +transmission-2.73.ebuild:
+  Version bump.
 
 *transmission-2.72 (23 Oct 2012)
 
