--- a/dev-libs/boost/ChangeLog
+++ b/dev-libs/boost/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.269 2012/10/31 16:32:25 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.270 2012/10/31 18:27:00 flameeyes Exp $
+
+  31 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> boost-1.49.0-r1.ebuild:
+  Remove test support from 1.49 as well, since it's not supposed to work and the
+  check-reqs limits are bogus anyway.
 
 *boost-1.51.0-r1 (31 Oct 2012)
 
