--- a/mail-client/thunderbird-bin/ChangeLog
+++ b/mail-client/thunderbird-bin/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/thunderbird-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird-bin/ChangeLog,v 1.89 2012/10/29 16:08:20 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird-bin/ChangeLog,v 1.90 2012/10/31 19:09:12 axs Exp $
+
+  31 Oct 2012; Ian Stakenvicius <axs@gentoo.org> thunderbird-bin-15.0.1.ebuild,
+  thunderbird-bin-16.0.2.ebuild:
+  Interim solution to block net-libs/libproxy[spidermonkey] due to mozjs symbol
+  collisions that cause crashes, bug 439148
 
 *thunderbird-bin-16.0.2 (29 Oct 2012)
 
