--- a/sys-apps/pcmciautils/ChangeLog
+++ b/sys-apps/pcmciautils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/pcmciautils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.39 2012/10/31 19:19:36 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.40 2012/10/31 19:24:28 ssuominen Exp $
+
+  31 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> pcmciautils-017.ebuild:
+  Use virtual/yacc instead of hardcoding dev-util/yacc wrt #425756 by David
+  Carlos Manuelda
 
   31 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> pcmciautils-017.ebuild:
   Use udev.eclass for determining correct udevdir value from udev.pc pkg-config
