--- a/www-client/firefox-bin/ChangeLog
+++ b/www-client/firefox-bin/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/firefox-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/firefox-bin/ChangeLog,v 1.123 2012/10/31 18:17:49 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/firefox-bin/ChangeLog,v 1.124 2012/10/31 19:26:52 axs Exp $
+
+*firefox-bin-10.0.10 (31 Oct 2012)
+
+  31 Oct 2012; Ian Stakenvicius <axs@gentoo.org> +firefox-bin-10.0.10.ebuild:
+  ESR bump for security bug 439960
 
   31 Oct 2012; Ian Stakenvicius <axs@gentoo.org> firefox-bin-15.0.1.ebuild,
   firefox-bin-16.0.2.ebuild:
