--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7083 2012/10/31 16:31:52 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7084 2012/10/31 20:45:56 hasufell Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  31 Oct 2012; Julian Ospald <hasufell@gentoo.org> package.mask:
+  mask broken pornview
 
   31 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> updates/4Q-2012:
   Slotmove all boost and boost-build to slot 0.
